--- a/FermaOnline/Views/Experiment/Show.cshtml
+++ b/FermaOnline/Views/Experiment/Show.cshtml
@@ -20,8 +20,9 @@
                 <div class="d-flex justify-content-between">
                     <a asp-action="Index" class="btn btn-primary btn-lg ">Back</a>
                     <h2 class="text-primary center">@Model.Name</h2>
-                    <a type="button" class="btn btn-primary btn-lg " asp-controller="Survey" asp-route-Id="@Model.Id" asp-action="Create" disabled=@Model.Status>Add survey</a>
-                </div>
+ 
+                        <a type="button" class="btn btn-primary btn-lg" asp-controller="Survey" asp-route-Id="@Model.Id" asp-action="Create">Add survey</a>
+                    </div>
 
             </div>
             <div class="card-body">
@@ -252,7 +253,7 @@
                                 <td></td>
                                 @foreach (var survey in Model.SurveysList)
                                 {
-                                    <td>  <a asp-controller="Survey" asp-action="Delete" asp-route-Id="@survey.SurveyId" class="btn btn-danger mx-1">Delete</a></td>
+                                    <td class="text-center">  <a asp-controller="Survey" asp-action="Delete" asp-route-Id="@survey.SurveyId" class="btn btn-danger mx-1">Delete</a></td>
                                 }
 
                             </tr>
