--- a/FermaOnline/Views/Survey/Create.cshtml
+++ b/FermaOnline/Views/Survey/Create.cshtml
@@ -10,7 +10,7 @@
 
         <div class="row center">
             <div class="col-8">
-                <p>Add data in time order @ViewBag.CageNumber</p>
+                <p>Add data in time order</p>
                 <div class="mb-3 row">
                     <label asp-for="SurveyDate"></label>
                     <div class="col-sm-10">
@@ -29,13 +29,13 @@
                             <div class="sb-3 row">
                                 <label asp-for="@Model.Cages[i].CageQuantity">@alphabet[count] cage quantity</label>
                                 <div class="col-sm-10">
-                                    <input asp-for="@Model.Cages[i].CageQuantity" class="form-control " />
+                                    <input asp-for="@Model.Cages[i].CageQuantity" id="@alphabet[count]Quantity" class="form-control " />
                                 </div>
                             </div>
                             <div class="mb-3 row">
                                 <label asp-for="@Model.Cages[i].GroupWeight">@alphabet[count] cage group weight</label>
                                 <div class="col-sm-10">
-                                    <input type="number" step="0.01" asp-for="@Model.Cages[i].GroupWeight" class="form-control " />
+                                    <input type="number" step="0.01" id="@alphabet[count]Weight" asp-for="@Model.Cages[i].GroupWeight" class="form-control " />
                                 </div>
                             </div>
                             count++;
@@ -46,15 +46,47 @@
                         <div class="mb-3 row">
                             <label asp-for="DayOfLife"></label>
                             <div class="col-sm-10">
-                                <!-- <input asp-for="DayOfLife" class="form-control" />-->
-                                @{
-                                    //string value = (Model.Cages[0].GroupWeight > 500 ? "tak" : "nie");
-                                    //placeholder = @value
-                                <input  asp-for="DayOfLife" />
-
-                                }
+                                <input asp-for="DayOfLife" id="Day" />
                             </div>
                         </div>
+                        <script>
+                            const Quantity = document.getElementById('AQuantity');
+                            const Weight = document.getElementById('AWeight');
+                            const Day = document.getElementById('Day');
+                            let QuantityValue, WeightValue;
+
+                            Quantity.addEventListener('change', updateQuantityValue);
+                            Quantity.addEventListener('change', updateDayValue);
+
+                            Weight.addEventListener('change', updateWeightValue);
+                            Weight.addEventListener('change', updateDayValue);
+
+                            function updateQuantityValue(e){
+                               QuantityValue = e.target.value;
+                            }
+
+                            function updateWeightValue(e) {
+                                WeightValue = e.target.value;
+                            }
+
+                            function updateDayValue() {
+
+                                if (WeightValue && QuantityValue) {
+                                    var DayValue,Dict;
+                                    var IndyvidualBodyWeight = WeightValue / QuantityValue;
+
+                                    @*@{
+                                        @:DayValue= @FermaOnline.Models.TemplateCurve.CloseDayByValue(FermaOnline.Models.TemplateCurve.DefaultValuePig, IndyvidualBodyWeight); // nie można użyć zmiennej js w razor
+
+                                    }*@
+ 
+                                    Day.placeholder = DayValue;
+                                }
+                                else
+                                    Day.placeholder = "";
+                            }
+
+                        </script>
                     }
                     else
                     {
