--- a/FermaOnline/Views/Experiment/Update.cshtml
+++ b/FermaOnline/Views/Experiment/Update.cshtml
@@ -50,7 +50,19 @@
                             <input class="form-control" type="file" name="Formula" multiple />
                         </div>
                     </div>
-                </div>
+                    <div class="form-group ">
+                        <div class="col-4">
+                            <input name="AreChecked" type="checkbox" value="0" checked /> Difference in body weight<br />
+                            <input name="AreChecked" type="checkbox" value="1" checked /> Weight gain from start<br />
+                            <input name="AreChecked" type="checkbox" value="2" checked /> Average weight gain<br />
+                            <input name="AreChecked" type="checkbox" value="3" checked /> Weight gain from last survey<br />
+                            <input name="AreChecked" type="checkbox" value="4" checked /> Average weight gain from last survey<br />
+                            <input name="AreChecked" type="checkbox" value="5" checked /> Loculus feed intake<br />
+                            <input name="AreChecked" type="checkbox" value="6" checked /> Feed Intake Weekly<br />
+                            <input name="AreChecked" type="checkbox" value="7" checked /> FeedIntakDaily<br />
+                            <input name="AreChecked" type="checkbox" value="8" checked /> Feed Conversion Ratio<br />
+                        </div>
+                    </div>
                     <div class="form-group row">
                         <div class="col-8 offset-1 row">
                             <div class="col-4">
